--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -32,17 +32,8 @@
   background-image: url('/Backdrop.jpg');
   background-repeat: no-repeat center center fixed;
   background-size: cover;
-  min-height: 100%;
-  min-width: 1024px;
-
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
+  min-height: 100vh;
+  width: 100vw;
 }
 
 .RoundContainer {
