prevent navbar background turning white

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -23,6 +23,11 @@ html, body {
 .navbar-menu {
   color: rgb(0, 255, 200)
 }
+
+.navImage {
+  width: 64px;
+  height: 64px;
+}
 // gameboard image
 
 .mission-board {
